Experiment. Added GoatCounter user analytics.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script data-goatcounter="https://witold1.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 		<link rel="stylesheet" href="./assets/css/main.css" />
 		<link rel="stylesheet" href="./assets/css/gallery-filter-content.css" />
 		<!-- https://stackoverflow.com/questions/59431371/use-emoji-as-favicon-in-websites -->
