section's panel that is showing onClick - feature implemented. Minor class naming refactoring. Minor README.md descriptiong text refactoring.

--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
 		<!-- Site Navigation Bar -->
 		<div class="top-navigation-bar" id="top-navigation">
 			<a class="active_page" href="#home">📊 <b>Witold's</b> Data Viz Project</a>
-			<!--<a href="#blog">Blog</a>-->
-			<!--
-			<a href="#blog">News</a>
-			<a href="#contact">Contact</a>
-			<a href="#about">About</a>
-			-->
+			<a href="#about" class="flip" onclick="onClickPanelShow()" style="float: right" alt="linkedin link: linkedin.com/in/vital-yevtushenko/">About</a>
 			<a href="https://www.linkedin.com/in/vital-yevtushenko/" class="fa fa-linkedin" style="float: right" aria-label="Linkedin" alt="linkedin link: linkedin.com/in/vital-yevtushenko/"></a>
-			<a href="https://github.com/witold1/" class="fa fa-github" style="float: right" aria-label="Twitter" alt="github link/ github.com/witold1" ></a>
+			<a href="https://github.com/witold1/" class="fa fa-github" style="float: right" aria-label="Github" alt="github link: github.com/witold1/" ></a>
 			<a href="javascript:void(0);" aria-label="Responsive top navigation" class="icon" onclick="myFunction()">
 		    <i class="fa fa-bars"></i>
 		  </a>
     </div>
 
+		<div id="panel">
+			<h2> 👨‍💻 Brief introduction</h2>
+			<p>Hello, <a href="https://witold1.github.io/">Witold1</a> is here! You might recognize me from my involvement in various analytical projects, insightful blog comments, and captivating <a href="https://witold1.github.io/">DataViz products</a>. Below, you'll find a selection of <a href="https://github.com/witold1#-remarkable-projects">open projects</a> that I believe are worth sharing from my previous experiences.</p>
+			<p>If you're interested in collaborating on projects that require joint expertise or need recommendations regarding data sources and data processing, don't hesitate to reach out.</p>
+		</div>
+
 		<!-- Page Text Header -->
-		<div class="page-text-header">
+		<div class="page-main-content-header-block">
 			<!-- Page Content Title -->
 			<h1>Data and information visualization pond ⛵</h1>
 			<!-- Page Content Suptitle -->
@@ -52,10 +53,10 @@
 		</div>
 
 		<!-- Image Gallery Grid -->
-		<div class="row">
+		<div class="page-main-content-responsive">
 
-			<!-- Gallery column-responsive i -->
-			<div class="column-responsive">
+			<!-- Gallery page-column-content-responsive i -->
+			<div class="page-column-content-responsive">
 				<div class="gallery-filter-content Road-Networks Southeast-Asia Korea">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
@@ -259,8 +260,8 @@
 				</div>
 			</div>
 
-			<!-- Gallery column-responsive i+1 -->
-			<div class="column-responsive">
+			<!-- Gallery page-column-content-responsive i+1 -->
+			<div class="page-column-content-responsive">
 				<div class="gallery-filter-content Road-Networks Asia Southeast-Asia Indian-Peninsula">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
@@ -487,8 +488,8 @@
 				</div>
 			</div>
 
-			<!-- Gallery column-responsive i+2 -->
-			<div class="column-responsive">
+			<!-- Gallery page-column-content-responsive i+2 -->
+			<div class="page-column-content-responsive">
 				<div class="gallery-filter-content Road-Networks Central-Asia">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
