Testing first post

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 
 		<!-- Site Navigation Bar -->
 		<div class="top-navigation-bar" id="top-navigation">
-			<a class="active_page" href="#home">📊 <b>Witold's</b> Data Viz Project</a>
-			<a href="#about" class="flip" onclick="onClickPanelShow()" style="float: right" alt="linkedin link: linkedin.com/in/vital-yevtushenko/">About</a>
+			<a class="active_page" href="#home">📊 <b>Witold's</b> Blog Project</a>
+			<a href="javascript:void(0);" style="float: right" alt="Portfolio Gallery link:">Portfolio Gallery</a>
+			<a href="./blog/index.html" style="float: right" alt="Blog link:">Blog</a>
 			<a href="https://www.linkedin.com/in/vital-yevtushenko/" class="fa fa-linkedin" style="float: right" aria-label="Linkedin" alt="linkedin link: linkedin.com/in/vital-yevtushenko/"></a>
 			<a href="https://github.com/witold1/" class="fa fa-github" style="float: right" aria-label="Github" alt="github link: github.com/witold1/" ></a>
-			<a href="javascript:void(0);" aria-label="Responsive top navigation" class="icon" onclick="myFunction()">
+			<a href="javascript:void(0);" class="flip" onclick="onClickPanelShow()" style="float: right" alt="about me block">About Me</a>
+	    <a href="javascript:void(0);" aria-label="Responsive top navigation" class="icon" onclick="myFunction()">
 		    <i class="fa fa-bars"></i>
 		  </a>
-    </div>
+		</div>
 
 		<div id="panel">
 			<h2> 👨‍💻 Brief introduction</h2>
@@ -705,11 +707,9 @@
 		</div>
 
 		<!-- Site Bottom Bar -->
-		<div class="bottom-bar">
-			<title>Witold1's Data 💫</title>
-			<a href="https://visitorbadge.io/status?path=https://witold1.github.io/">
-				<img src="https://api.visitorbadge.io/api/visitors?path=https://witold1.github.io/&countColor=%23263759" aria-label="Visitor Badge" alt="visitor badge"/>
-			</a>
+		<div class="bottom-bar" id="bottom-navigation">
+			<a href="../sitemap.html"><b>sitemap</a> |
+			© Copyright 2024 by Witold's Data Consulting, LLC. All rights reserved. Designed and developed by Witold's Data Consulting, LLC.
 		</div>
 
 	</body>
