--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Site Navigation Bar -->
 		<div class="top-navigation-bar" id="top-navigation">
 			<a class="active_page" href="#home">📊 <b>Witold's</b> Blog Project</a>
-			<a href="javascript:void(0);" style="float: right" alt="Portfolio Gallery link:">Portfolio Gallery</a>
+			<a href="./index.html" style="float: right" alt="Portfolio Gallery link:">Portfolio Gallery</a>
 			<a href="./blog/index.html" style="float: right" alt="Blog link:">Blog</a>
 			<a href="https://www.linkedin.com/in/vital-yevtushenko/" class="fa fa-linkedin" style="float: right" aria-label="Linkedin" alt="linkedin link: linkedin.com/in/vital-yevtushenko/"></a>
 			<a href="https://github.com/witold1/" class="fa fa-github" style="float: right" aria-label="Github" alt="github link: github.com/witold1/" ></a>
