Website update. Usability minor fixes (modal image max width changed to relative). Gallery and blog are now more connected. New post draft.

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -45,7 +45,12 @@
       <!-- Image Gallery Grid -->
       <div class="page-main-content-responsive">
          <!-- Gallery page-column-content-responsive i -->
-         <div class="page-column-content-responsive">
+          <div class="page-column-content-responsive">
+            <div class="gallery-filter-content Data-Visualization General Central-Asia Kazakh Khanate">
+               <img class="myImages" id="myImg" src="../blog/posts/small-project-blood-tool/figures/project-bloody-toll_preview.jpeg" loading="lazy"
+                     alt="Officially reported casualties in Russia-Ukraine war, since Feb 2022 (raster format, .jpeg)️<br>
+                          <a href='../blog/posts/small-project-blood-tool/post.html' style='color:white'>[⇱ see page in blog]</a>">
+            </div>
             <div class="gallery-filter-content Road-Networks Southeast-Asia Korea">
                <div class="slideshow-container">
                   <div class="mySlides fade">
@@ -277,6 +282,15 @@
          </div>
          <!-- Gallery page-column-content-responsive i+1 -->
          <div class="page-column-content-responsive">
+            <div class="gallery-filter-content General">
+               <video controls muted loop loading="lazy"
+                 style="background-color: #f2f3f4; box-shadow: 1px 2px 2px silver; "
+                 title="Simplified building taxonomy of selected cities (animation, .mp4 | created with ezgif.com)<br>
+                       <a href='../blog/posts/small-project-building-taxonomy/post.html' style='color:white'>[⇱ see page in blog]</a>"
+                 poster="../blog/posts/small-project-building-taxonomy/figures/building-taxanomy-collage_preview.jpeg">
+                 <source src="https://i.imgur.com/vvYNPWp.mp4" type="video/mp4">
+               </video>
+            </div>
             <div class="gallery-filter-content Road-Networks Asia Southeast-Asia Indian-Peninsula">
                <div class="slideshow-container">
                   <div class="mySlides fade">
@@ -393,7 +407,9 @@
             </div>
             <div class="gallery-filter-content Geography-Terrain Urbanism General USA-Parks-Parkings">
                <img class="myImages" id="myImg" src="./assets/content/USA Parks and Parkings.gif" loading="lazy"
-                  alt="🗺️ Comparative analysis and visualization of parking and park footprints across 33 urban downtowns<br>[U.S.A. Park and Parkings | Data from OSM]">
+                  alt="🗺️ Comparative analysis and visualization of parking and park footprints across 33 urban downtowns
+                      <br>
+                      <a href='../blog/posts/small-project-blood-tool/post.html' style='color:white'>[⇱ Project 'U.S.A. Parks and Parkings' ⎋ | Data from OSM]</a>">
             </div>
             <div class="gallery-filter-content Population-Charts Southeast-Asia">
                <div class="slideshow-container">
@@ -535,6 +551,28 @@
          </div>
          <!-- Gallery page-column-content-responsive i+2 -->
          <div class="page-column-content-responsive">
+            <div class="gallery-filter-content Data-Visualization General Central-Asia Kazakh Khanate">
+               <div class="slideshow-container">
+                  <div class="mySlides fade">
+                     <div class="slideshow-slide-number-text">1 / 2</div>
+                     <img class="myImages" id="myImg" src="../blog//posts/project-country-rulers/figures/rullers_chart_kazakh-khanate-dark.png" loading="lazy"
+                        alt="Timeline of Kazakh Khans by Year (dark theme | raster format, .png)️<br>
+                             <a href='../blog/posts/project-country-rulers/post.html' style='color:white'>[⇱ see page in blog]</a>">
+                  </div>
+                  <div class="mySlides fade">
+                     <div class="slideshow-slide-number-text">2 / 2</div>
+                     <img class="myImages" id="myImg" src="../blog//posts/project-country-rulers/figures/rullers_chart_kazakh-khanate-white.png" loading="lazy"
+                        alt="Timeline of Kazakh Khans by Year (white theme | raster format, .png)️️<br>
+                             <a href='../blog/posts/project-country-rulers/post.html' style='color:white'>[⇱ see page in blog]</a>">
+                  </div>
+                  <a class="prev">&#10094;</a>
+                  <a class="next">&#10095;</a>
+                  <div style="text-align:center">
+                     <span class="dot"></span>
+                     <span class="dot"></span>
+                  </div>
+               </div>
+            </div>
             <div class="gallery-filter-content Road-Networks Central-Asia">
                <div class="slideshow-container">
                   <div class="mySlides fade">
